# thesiskit

./: .gitignore  LICENSE  MANIFEST.in  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: tutorial.md
examples/mini-run/: README.md
examples/mini-run/citations/: references.bib
examples/mini-run/experiment/: config.yaml
examples/mini-run/verification/: full_report.md
src/thesiskit/: __init__.py  cli.py  config.py
src/thesiskit/agents/: __init__.py  hypothesis.py  review.py
src/thesiskit/example_data/: __init__.py
src/thesiskit/example_data/mini-run/citations/: papers.json  verification_report.md
src/thesiskit/example_data/mini-run/draft/: paper.md
src/thesiskit/example_data/mini-run/experiment/: results.json
src/thesiskit/example_data/mini-run/input/: topic.txt
src/thesiskit/experiment/: __init__.py  sandbox.py
src/thesiskit/literature/: __init__.py  acl.py  acl_ids.py  arxiv.py  citations.py  semanticscholar.py
src/thesiskit/llm/: __init__.py
src/thesiskit/pipeline/: full_pipeline.py  runner.py  stages.py
src/thesiskit/templates/: __init__.py  iclr.py  icml.py  neurips.py
src/thesiskit/writing/: __init__.py  paper.py
tests/: conftest.py  test_acl_anthology.py  test_arxiv_worker_template.py  test_ci_workflow.py  test_citation_bibtex.py  test_citation_verifier.py  test_cli.py  test_cli_citations.py  test_cli_examples.py  test_config.py  test_examples.py  test_full_pipeline.py  test_literature.py  test_pipeline_runner.py  test_review_agents.py  test_sandbox.py  test_stages.py  test_templates.py  test_writing.py
workers/: arxiv-cache-proxy.js
